kube/stable/oracle-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: oracle-service
spec:
  selector:
    app: oracle
  ports:
  - protocol: TCP
    port: 1521
    targetPort: 1521
