kube/stable/postgresql-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgresql-service
spec:
  selector:
    app: postgresql
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
